Got HTML and MD working together
Changed R markdown header to knit to HTML and to Github markdown

--- a/R markdown files/week 2 -class 1-Intro to R.Rmd
+++ b/R markdown files/week 2 -class 1-Intro to R.Rmd
@@ -2,7 +2,9 @@
 title: "DataScience1-class_3"
 author: "Phileas Dazeley Gaist"
 date: "9/21/2021"
-output: rmarkdown::github_document
+output: 
+  html_document:
+    keep_md: true
 ---
 # # ---------------------------------------------------------------
 # ┏━━━┓╋╋┏┓┏┓╋╋╋╋╋╋╋╋╋╋╋╋╋╋┏━┓╋┏┓┏┓╋╋╋╋╋┏━━━┓┏┓┏┓╋╋╋╋╋╋┏┓
