Updated document headers

--- a/R markdown files/Data_Science_Written_HW_1_Phileas_Dazeley-Gaist.Rmd
+++ b/R markdown files/Data_Science_Written_HW_1_Phileas_Dazeley-Gaist.Rmd
@@ -169,6 +169,18 @@ cereals %>%
   summarise(percentage = 100*(H/(C+H)))
 ```
 
+*or, alternatively*
+
+```{r}
+cereals %>% 
+  group_by(type) %>% 
+  summarise(type_counts = n()) %>% 
+  mutate(percentages = 100 * type_counts/sum(type_counts)) %>% 
+  filter(type == "H") %>% 
+  select(type, percentages)
+```
+
+
 **11.** Which shelf has the highest mean (i.e., average) percentage of daily vitamins per serving?
 
 **Answer:** The third shelf has the highest mean percentage of daily vitamins per serving. The mean for the third shelf stands at approximately 44.7 percent of the FDA daily intake recommendation.
